# botctl

./: README.md  pyproject.toml
commands/: acl.kdl  audit.kdl  bind.kdl  docker.kdl  example.kdl  exec.kdl  logs.kdl  rpz.kdl  services.kdl  status.kdl  whoami.kdl
config/: example.kdl  serverbot.kdl
src/serverbot/: __init__.py  main_bot.py  main_worker.py
src/serverbot/application/: acl_service.py  audit_service.py  bootstrap_acl.py  config_service.py  rpz_service.py  services.py  system_services.py  use_cases.py  worker_alerts.py
src/serverbot/config/: logging.py  settings.py
src/serverbot/domain/: alerts.py  errors.py  models.py  ports.py  repositories.py  security.py
src/serverbot/infrastructure/: command_catalog.py  notifications.py  telegram_callback_gateway.py  telegram_controller.py  telegram_middlewares.py  telegram_parser.py  telegram_updates.py
src/serverbot/workers/: checker_factory.py  placeholders.py
tests/integration/: test_execute_use_case.py
tests/integration/commanding/: test_pipeline.py  test_telegram_callback_gateway.py  test_telegram_gateway.py
tests/integration/db/: test_sqlite_alert_state_repository.py  test_sqlite_repositories.py
tests/integration/system/: test_subprocess_runner.py
tests/unit/: test_command_catalog.py  test_policy_service.py
tests/unit/application/: test_acl_bootstrap.py  test_acl_service.py  test_checker_factory.py  test_execute_authorized_use_case.py  test_rpz_service.py  test_systemd_service.py  test_worker_alerts.py
tests/unit/config/: test_acl_grants_in_kdl.py  test_alert_checks_in_kdl.py  (+4 more)
(+32 files in other folders)
